--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
       </ul>
     </blockquote>
     <h3>Example creation usage:</h3>
-   
+   <code>{
+  input:https://evelyn-url-shortener-new.herokuapp.com/new/http://www.google.com
+}
+  </code>
     <br/>
    
     <h3>Example creation output</h3>
     <code>{
-  "original_url":"http://foo.com:80",
-  "short_url":""
+  "original_url":"http://www.google.com",
+  "short_url":"https://evelyn-url-shortener-new.herokuapp.com/1010"
 }
 </code>
-    <h3>Usage:</h3><code></code>
+    <h3>Input</h3><code>Usage:https://evelyn-url-shortener-new.herokuapp.com/1010</code>
     <h3>Will redirect to:</h3><code>https://www.google.com/</code>
   </div>
 </body>
